dark mode fixes

--- a/frontend/src/design/base.css
+++ b/frontend/src/design/base.css
@@ -1,5 +1,5 @@
 :root {
-    --blur: 24px;
+    --blur: 8px;
 }
 
 * {
